crates/cheers/tests/ui/unsupported_signal_path_segment.rs
use cheers::prelude::*;

#[derive(Cheers)]
struct BadSignal {
    #[signal]
    __proto__: String,
}

fn main() {}
